# python-wex-addon-dev-python

./: README.md  pyproject.toml  requirements.in  requirements.txt
.wex/: config.yml
.wex/knowledge/readme/: introduction.md
.wex/python/app_manager/: requirements.txt
src/wexample_wex_addon_dev_python/: python_addon_manager.py
src/wexample_wex_addon_dev_python/commands/code/: check.py  format.py
src/wexample_wex_addon_dev_python/commands/code/check/: mypy.py  pylint.py  pyright.py
src/wexample_wex_addon_dev_python/commands/code/format/: black.py  isort.py
src/wexample_wex_addon_dev_python/commands/examples/: validate.py
src/wexample_wex_addon_dev_python/commands/examples/classes/: example_pydantic_class_with_public_var_internaly_defined.py
src/wexample_wex_addon_dev_python/commands/examples/utils/: some_example_type.py
src/wexample_wex_addon_dev_python/commands/release/: publish.py
src/wexample_wex_addon_dev_python/common/: pypi_registry_gateway.py
src/wexample_wex_addon_dev_python/config_option/: format_python_package_toml_option.py
src/wexample_wex_addon_dev_python/config_value/: python_package_readme_config_value.py
src/wexample_wex_addon_dev_python/const/: package.py  python.py  tags.py
src/wexample_wex_addon_dev_python/file/: python_app_iml_file.py  python_package_toml_file.py  python_pyproject_toml_file.py
src/wexample_wex_addon_dev_python/helpers/: pdm.py
src/wexample_wex_addon_dev_python/middleware/: each_python_file_middleware.py
src/wexample_wex_addon_dev_python/operation/: format_python_package_toml_operation.py
src/wexample_wex_addon_dev_python/operations_provider/: addon_dev_python_operations_provider.py
src/wexample_wex_addon_dev_python/resources/: package_publish_gitlab.yml
src/wexample_wex_addon_dev_python/resources/docker/: Dockerfile.python-profiling
src/wexample_wex_addon_dev_python/resources/readme_templates/: tests.md.j2  title.md.j2
src/wexample_wex_addon_dev_python/services/python/: app_service.py  service.yml
src/wexample_wex_addon_dev_python/services/python/commands/service/: install.py  setup.py
src/wexample_wex_addon_dev_python/services/python/docker/: .wex.yml  docker-compose.yml
src/wexample_wex_addon_dev_python/services/python/samples/docker/: docker-compose.yml  entrypoint.sh
src/wexample_wex_addon_dev_python/services/python/samples/docker/images/: Dockerfile.base  Dockerfile.develop
src/wexample_wex_addon_dev_python/workdir/: python_package_workdir.py  python_packages_suite_workdir.py  python_workdir.py
src/wexample_wex_addon_dev_python/workdir/mixin/: with_profiling_python_workdir_mixin.py  with_profiling_workdir_mixin.py
tests/helpers/: test_pdm.py
wexample_wex_addon_dev_python/: python_addon_manager.py
wexample_wex_addon_dev_python/commands/code/: check.py  format.py
wexample_wex_addon_dev_python/commands/code/check/: mypy.py  pylint.py  pyright.py
wexample_wex_addon_dev_python/commands/code/format/: black.py  isort.py
wexample_wex_addon_dev_python/commands/examples/: validate.py
wexample_wex_addon_dev_python/commands/examples/classes/: example_pydantic_class_with_public_var_internaly_defined.py
wexample_wex_addon_dev_python/commands/examples/utils/: some_example_type.py
wexample_wex_addon_dev_python/file/: python_package_toml_file.py
wexample_wex_addon_dev_python/middleware/: each_python_file_middleware.py
wexample_wex_addon_dev_python/operation/: format_python_package_toml_operation.py
wexample_wex_addon_dev_python/operations_provider/: dev_python_operations_provider.py
wexample_wex_addon_dev_python/options_provider/: dev_python_options_provider.py
wexample_wex_addon_dev_python/workdir/: python_package_workdir.py  python_packages_suite_workdir.py  python_workdir.py
