[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-wex-addon-dev-python"
version = "0.0.49"
description = "Python dev addon for wex"
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "jinja2",
    "networkx",
    "pylint",
    "pyright",
    "wexample-filestate-python==0.0.45",
    "wexample-wex-addon-app==0.0.47",
    "wexample-wex-core==6.0.49",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-wex-dev-python"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_wex_addon_dev_python"
from = "src"
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_wex_addon_dev_python.testing*"]
